--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "budget-hub",
   "version": "1.0.0",
-  "description": "Budget Hub - Personal Finance Management",
+  "description": "A performance-optimized budget tracking application",
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "build:analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lighthouse": "lhci autorun"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "lucide-react": "^0.263.1"
+    "react-router-dom": "^6.8.0",
+    "web-vitals": "^3.3.2"
+  },
+  "devDependencies": {
+    "@lhci/cli": "^0.15.1",
+    "react-scripts": "^0.0.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "browserslist": {
     "production": [
